Revisé h y cards en distintas secciones

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "proyectocoder",
+  "name": "atticostudio",
   "version": "1.0.0",
-  "description": "",
+  "description": "Página web de arquitectura y diseño de interior",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
